# training-packaging-2

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  NEWS  README  TODO  aclocal.m4  configure  configure.ac
data/: Makefile.am  Makefile.in
doc/: Makefile.am  Makefile.in  alifmt.html  alifmt.man  alifmt.pod  seqfmt.html  seqfmt.man  seqfmt.pod  squizz.man  squizz.pod
lib/: Makefile.am  Makefile.in  align.c  align.h  config.h.in  sequence.c  sequence.h
lib/align/: clustal.c  clustal.h  clustall.c  clustall.l  clustaly.c  clustaly.h  clustaly.y  fasta2.c  fasta2.h  mega.c  mega.h  megal.c  megal.l  megay.c  megay.h  megay.y  msf.c  msf.h  msfl.c  msfl.l  msfy.c  msfy.h  msfy.y  nexusi.c  nexusi.h  nexusil.c  nexusil.l  nexusiy.c  nexusiy.h  nexusiy.y  parse.c  parse.h  phylip.c  phylip.h  phylipi.c  phylipi.h  phylipil.c  phylipil.l  phylipiy.c  phylipiy.h  (+15 more)
lib/sequence/: embl.c  embl.h  embll.c  embll.l  embly.c  embly.h  embly.y  fasta.c  fasta.h  fastal.c  fastal.l  fastay.c  fastay.h  fastay.y  gcg.c  gcg.h  gcgl.c  gcgl.l  gcgy.c  gcgy.h  gcgy.y  gde.c  gde.h  gdel.c  gdel.l  gdey.c  gdey.h  gdey.y  genbank.c  genbank.h  genbankl.c  genbankl.l  genbanky.c  genbanky.h  genbanky.y  ig.c  ig.h  igl.c  igl.l  igy.c  (+36 more)
src/: Makefile.am  Makefile.in  format.c  format.h  squizz.c
test/: Makefile.am  Makefile.in  align.sh  clustal.sh  convali.sh  convseq.sh  count.sh  embl.sh  fmtali.sh  fmtseq.sh  genbank.sh  ig.sh  mega.sh  msf.sh  nexus.sh  phylipi.sh  phylips.sh  raw.sh  sprot.sh  squizz.sh  stockholm.sh
test/align/: clustal.seq  fasta.seq  mega.seq  msf.seq  nexusi.seq  phylipi.seq  phylips.seq  stock.seq
test/sequence/: embl.seq  fasta.seq  gcg.seq  gde.seq  genbank.seq  genpept.seq  ig.seq  nbrf.seq  pir.seq  raw.seq  refseqn.seq  refseqp.seq
